# litecuda

./: CMakeLists.txt  README.md  objective.md
examples/: matrix_multiply.cu
include/vgpu/: api.hpp  memory_manager.hpp  scheduler.hpp  vgpu_manager.hpp  virtual_gpu.hpp
src/: memory_manager.cpp  scheduler.cpp  vgpu_manager.cpp  virtual_gpu.cpp
